third_party/rust/chromium_crates_io/vendor/derive_more-v2/tests/compile_fail/from_str/struct_flat_unknown_attribute.rs
#[derive(derive_more::FromStr)]
#[from_str(unknown = "unknown")]
struct Foo;

fn main() {}
